# IMS-ASQ

./: installation guidelines.txt
BackEnd/Backend/: inventoryManagement
BackEnd/Backend/Backend/: settings.py  urls.py
backend/: .env  pyproject.toml
backend/backend/: settings.py  urls.py
backend/product/: models.py  serializers.py  urls.py  views.py
backend/product/migrations/: 0001_initial.py  0002_rename_quantity_product_quantity.py
backend/user/: models.py  urls.py  views.py
backend/user/migrations/: 0002_remove_appuser_is_superuser.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
